packages/nemo-parser/tests/snapshots/types__check_failing@unknown_intrinsic.nemo.snap
---
source: packages/nemo-parser/tests/types.rs
expression: err_buf
input_file: packages/nemo-parser/tests/type_errors/unknown_intrinsic.nemo
---
[05] Error: Unknown variable unknown
   ╭─[source:1:13]
   │
 2 │   @unknown()
   │   ───┬───  
   │      ╰───── Unknown variable 'unknown'
───╯


