packages/nemo-parser/tests/snapshots/types__check_failing@unknown_struct.nemo.snap
---
source: packages/nemo-parser/tests/types.rs
expression: err_buf
input_file: packages/nemo-parser/tests/type_errors/unknown_struct.nemo
---

