packages/nemo-parser/tests/snapshots/types__check_failing@unknown_type.nemo.snap
---
source: packages/nemo-parser/tests/types.rs
expression: err_buf
input_file: packages/nemo-parser/tests/type_errors/unknown_type.nemo
---

